jena-owl2: 1) rename `OntClass.Combination` -> `OnClass.CollectionOf` & add two new abstractions `OnClass.LogicalExpression` and `OnClass.ValueRestriction` 2) refactoring and fixing OntClasses.Factory